--- a/public/assignment-queue.html
+++ b/public/assignment-queue.html
@@ -11,13 +11,13 @@
             box-sizing: border-box;
         }
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #f5f7fa;
-            color: #333;
-            line-height: 1.4;
-            font-size: 14px;
-        }
+				body {
+						font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+						background: #e5e7eb;
+						color: #333;
+						line-height: 1.4;
+						font-size: 14px;
+				}
 
         .header {
             background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%);
@@ -300,20 +300,25 @@
             transform: translateY(-1px);
         }
 
-        .expand-btn {
-            background: #f8fafc;
-            border: 1px solid #e2e8f0;
-            padding: 0.5rem;
-            cursor: pointer;
-            border-radius: 6px;
-            transition: all 0.2s ease;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 32px;
-            height: 32px;
-        }
-
+				.expand-btn {
+						background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
+						border: none;
+						padding: 0;
+						cursor: pointer;
+						border-radius: 6px;
+						transition: all 0.2s ease;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						width: 28px;   /* Force square */
+						height: 28px;  /* Force square */
+						min-width: 28px;  /* Prevent shrinking */
+						max-width: 28px;  /* Prevent growing */
+						flex-shrink: 0;   /* Don't shrink in flex containers */
+				}
+		
+						
+			
         .expand-btn:hover {
             background: #e2e8f0;
             border-color: #cbd5e1;
@@ -321,15 +326,11 @@
             box-shadow: 0 1px 3px rgba(0,0,0,0.1);
         }
 
-        .expand-arrow {
-            width: 0;
-            height: 0;
-            border-left: 8px solid #e74c3c;
-            border-top: 5px solid transparent;
-            border-bottom: 5px solid transparent;
-            transition: transform 0.3s ease;
-            transform-origin: 35% 50%;
-        }
+				.expand-arrow {
+						border-left: 6px solid #fed7aa;
+						border-top: 4px solid transparent;
+						border-bottom: 4px solid transparent;
+				}
 
         .expand-btn.expanded .expand-arrow {
             transform: rotate(90deg);
