--- a/public/assignment-queue.html
+++ b/public/assignment-queue.html
@@ -458,9 +458,175 @@
             color: #666;
             font-size: 1.1rem;
         }
+			
+/* Main container for chat compression */
+        .main-container {
+            transition: margin-right 0.3s ease;
+            margin-right: 0;
+        }
+
+        .main-container.chat-open {
+            margin-right: 350px;
+        }			
+
+			
+/* Chat trigger button */
+        .chat-trigger {
+            position: fixed;
+            top: 50%;
+            right: 20px;
+            transform: translateY(-50%);
+            width: 60px;
+            height: 60px;
+            border-radius: 12px;
+            background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%);
+            border: none;
+            color: white;
+            font-size: 1.2rem;
+            cursor: pointer;
+            box-shadow: 0 4px 20px rgba(231, 76, 60, 0.3);
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 1001;
+        }
+
+        .chat-trigger:hover {
+            transform: translateY(-50%) scale(1.05);
+            box-shadow: 0 6px 25px rgba(231, 76, 60, 0.4);
+        }
+
+        .chat-trigger.chat-open {
+            right: 370px;
+        }	
+			
+			/* Chat sidebar */
+        .chat-sidebar {
+            position: fixed;
+            top: 0;
+            right: -350px;
+            width: 350px;
+            height: 100vh;
+            background: white;
+            box-shadow: -4px 0 20px rgba(0,0,0,0.08);
+            transition: right 0.3s ease;
+            z-index: 1000;
+            display: flex;
+            flex-direction: column;
+        }
+
+			.chat-sidebar-header {
+            background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%);
+            color: white;
+            padding: 1.5rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        .chat-sidebar-title {
+            font-size: 1.3rem;
+            font-weight: 600;
+            margin: 0;
+        }
+
+        .chat-close {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 1.2rem;
+            cursor: pointer;
+            padding: 0.2rem;
+            min-width: auto;
+        }
+
+        .chat-sidebar-content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            padding: 1.5rem;
+        }
+
+        .chat-messages {
+            flex: 1;
+            overflow-y: auto;
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            background: #f8fafc;
+            border-radius: 12px;
+            margin-bottom: 1rem;
+            max-height: calc(100vh - 200px);
+        }
+
+        .chat-message {
+            max-width: 80%;
+            padding: 0.8rem 1rem;
+            border-radius: 12px;
+            font-size: 0.9rem;
+            line-height: 1.4;
+        }
+
+        .chat-message.agent {
+            align-self: flex-start;
+            background: white;
+            color: #374151;
+            border-bottom-left-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+			.chat-close:hover {
+            transform: none;
+            box-shadow: none;
+            opacity: 0.8;
+        }
+			
+			.chat-input-container {
+            display: flex;
+            gap: 0.5rem;
+        }
+
+        .chat-input {
+            flex: 1;
+            padding: 0.8rem;
+            border: 1px solid #e2e8f0;
+            border-radius: 8px;
+            font-size: 0.9rem;
+            resize: none;
+            min-height: 40px;
+            max-height: 100px;
+        }
+
+        .chat-input:focus {
+            outline: none;
+            border-color: #e74c3c;
+        }
+
+        .chat-send {
+            background: #e74c3c;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            padding: 0.8rem 1rem;
+            cursor: pointer;
+            font-size: 0.9rem;
+            min-width: auto;
+            transition: background-color 0.2s ease;
+        }
+
+        .chat-send:hover {
+            background: #c0392b;
+            transform: none;
+            box-shadow: none;
+        }
+			
+			
     </style>
 </head>
 <body>
+	<div class="main-container" id="mainContainer">
     <div class="header">
         <h1>ProWorkflow Assignment Queue</h1>
         <p>Review and assign pending project requests</p>
@@ -944,6 +1110,23 @@
             `;
         }
 
+			
+					function toggleChatSidebar() {
+											const sidebar = document.getElementById('chatSidebar');
+											const trigger = document.getElementById('chatTrigger');
+											const mainContainer = document.getElementById('mainContainer');
+
+											const isOpen = sidebar.classList.toggle('open');
+
+											if (trigger) {
+													trigger.classList.toggle('chat-open', isOpen);
+											}
+
+											if (mainContainer) {
+													mainContainer.classList.toggle('chat-open', isOpen);
+											}
+									}
+			
         // Event listeners
         document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('groupFilter').addEventListener('change', () => {
@@ -959,6 +1142,33 @@
             // Load requests on page load
             loadRequests();
         });
-    </script>
+</script>
+		
+		
+<!-- Chat trigger button -->
+    <button class="chat-trigger" id="chatTrigger" onclick="toggleChatSidebar()">
+        💬
+    </button>
+
+<!-- Right sidebar chat -->
+    <div class="chat-sidebar" id="chatSidebar">
+        <div class="chat-sidebar-header">
+            <h3 class="chat-sidebar-title">Assignment Assistant</h3>
+            <button class="chat-close" onclick="toggleChatSidebar()">&times;</button>
+        </div>
+        <div class="chat-sidebar-content">
+            <div class="chat-messages" id="chatMessages">
+                <div class="chat-message agent">
+                    Hello! I'm your assignment assistant.
+                </div>
+            </div>
+            <div class="chat-input-container">
+                <textarea class="chat-input" id="chatInput" placeholder="Ask about assignments..." rows="1"></textarea>
+                <button class="chat-send" id="chatSend">Send</button>
+            </div>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
